--- a/src/style.css
+++ b/src/style.css
@@ -26,23 +26,13 @@ nav {
   background-image: url(./assets/mohammad-rahmani-8qEB0fTe9Vw-unsplash.jpg);
 }
 
-#btn-hi {
-  width: 6.25rem;
-  padding: 0.5rem;
-  border: none;
-  border-radius: 0.625rem;
-  color: white;
-  background-color: #494e5f;
+.btn-animation {
   transition: transform 200ms ease-in-out;
 }
 
-#btn-hi:hover {
+.btn-animation:hover {
   cursor: pointer;
   transform: scale(1.05);
-}
-
-#btn-hi:active {
-  background-color: #ff914d;
 }
 
 #text-home {
@@ -54,36 +44,117 @@ nav {
   font-weight: 43.75rem;
 }
 
-#img-about {
-  background-color: #494e5f;
-  width: 190rem;
+#text-description {
+  width: 31.25rem;
 }
 
-.container-skills {
-  display: flex;
+#img-about {
+  width: 190rem;
+  background-color: #494e5f;
 }
+
+/* .container-skills {
+  display: flex;
+} */
 
 .card-img-top {
   width: 6.25rem;
 }
 
-.card {
+.card-skills {
+  text-align: center;
   width: 10rem;
   padding-top: 0.625rem;
   margin: 1.25rem 1.875rem;
   border: none;
-  align-items: center;
   transition: transform 200ms ease-in-out;
 }
 
-.card:hover {
+.card-skills:hover {
   transform: scale(1.05);
-  box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.4);
+  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+}
+
+.container-projects {
+  justify-content: center;
+}
+
+.card {
+  max-width: 33.75rem;
+  margin: 50px 20px;
+  border: none;
+  transition: transform 200ms ease-in-out;
+  box-shadow: 0.125rem 0.25rem 0.375rem rgba(0, 0, 0, 0.075);
+}
+
+.card:hover {
+  transform: scale(1.06);
+  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+}
+
+
+#container-img-contact {
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  margin-bottom: -13.75rem;
+}
+
+#img-contact {
+  width: 21.25rem;
+  border: none;
+  border-radius: 100%;
+  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
+}
+
+.text-contact {
+  font-size: 4.375rem;
 }
 
 section {
-  padding-top: 6.25rem;
+  padding-top: 6rem;
 }
+
+.home-title {
+  font-size: 2rem;
+}
+
+footer {
+  text-align: center;
+  background-image: -webkit-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
+  background-image: -moz-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
+  background-image: -ms-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
+}
+
+.container-apps-contact {
+  display: flex;
+  justify-content: space-between;
+  width: 250px;
+}
+
+.img-app {
+  width: 60px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  border: 2px white solid;
+  background-color: white;
+  transition: transform 200ms ease-in-out;
+  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
+}
+
+.img-app:hover {
+  transform: scale(1.06);
+  border: 2px rgb(255, 218, 218) solid;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.container-information {}
 
 /* ANIMATION --> */
 
@@ -123,4 +194,10 @@ section {
 .fadeInLeft {
   -webkit-animation-name: fadeInLeft;
   animation-name: fadeInLeft;
+}
+
+@media (max-width: 600px) {
+  .home-title {
+    font-size: 1.5rem;
+  }
 }
