--- a/src/style.css
+++ b/src/style.css
@@ -48,14 +48,14 @@ nav {
   width: 31.25rem;
 }
 
-#img-about {
+.container-img-about {
   width: 190rem;
-  background-color: #494e5f;
 }
 
-/* .container-skills {
-  display: flex;
-} */
+#img-about {
+  background-color: #494e5f;
+  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+}
 
 .card-img-top {
   width: 6.25rem;
@@ -81,7 +81,7 @@ nav {
 
 .card {
   max-width: 33.75rem;
-  margin: 50px 20px;
+  margin: 3.125rem 1.25rem;
   border: none;
   transition: transform 200ms ease-in-out;
   box-shadow: 0.125rem 0.25rem 0.375rem rgba(0, 0, 0, 0.075);
@@ -91,7 +91,6 @@ nav {
   transform: scale(1.06);
   box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
 }
-
 
 #container-img-contact {
   display: flex;
@@ -115,10 +114,6 @@ section {
   padding-top: 6rem;
 }
 
-.home-title {
-  font-size: 2rem;
-}
-
 footer {
   text-align: center;
   background-image: -webkit-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
@@ -129,14 +124,14 @@ footer {
 .container-apps-contact {
   display: flex;
   justify-content: space-between;
-  width: 250px;
+  width: 15.625rem;
 }
 
 .img-app {
-  width: 60px;
-  margin-bottom: 20px;
+  width: 3.75rem;
+  margin-bottom: 1.25rem;
   border-radius: 50%;
-  border: 2px white solid;
+  border: 0.125rem white solid;
   background-color: white;
   transition: transform 200ms ease-in-out;
   box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
@@ -144,7 +139,7 @@ footer {
 
 .img-app:hover {
   transform: scale(1.06);
-  border: 2px rgb(255, 218, 218) solid;
+  border: 0.125rem rgb(255, 218, 218) solid;
 }
 
 #contact {
@@ -153,8 +148,6 @@ footer {
   align-items: center;
   justify-content: flex-end;
 }
-
-.container-information {}
 
 /* ANIMATION --> */
 
@@ -196,8 +189,111 @@ footer {
   animation-name: fadeInLeft;
 }
 
+@media (max-width: 768px) {
+  .h-100 {
+    height: auto !important;
+  }
+
+  .text.about {
+    flex-direction: column;
+  }
+
+  .container-img-about {
+    display: flex;
+    justify-content: center;
+  }
+
+  #img-about {
+    width: 21.875rem;
+  }
+
+  #text-home {
+    padding-top: 7.5rem;
+    margin: 2rem;
+  }
+
+  #text-name {
+    font-size: 3rem;
+  }
+
+  #text-description {
+    font-size: 2rem;
+    width: 20rem;
+  }
+
+  .container-about {
+    flex-direction: column;
+  }
+
+  .container-skills {
+    justify-content: center;
+  }
+
+  #container-img-contact {
+    margin-bottom: -9.8rem;
+  }
+
+  #img-contact {
+    width: 13rem;
+  }
+
+  section {
+    padding-top: 2rem;
+  }
+
+  #contact {
+    padding-top: 8rem;
+  }
+}
+
 @media (max-width: 600px) {
-  .home-title {
-    font-size: 1.5rem;
+  .h-100 {
+    height: auto !important;
+  }
+
+  #home {
+    background-image: url(./assets/Background-mobile.jpg);
+  }
+
+  .text.about {
+    flex-direction: column;
+  }
+
+  #text-home {
+    padding-top: 12.5rem;
+    margin: 2rem;
+  }
+
+  #text-name {
+    font-size: 3rem;
+  }
+
+  #text-description {
+    font-size: 2rem;
+    width: 20rem;
+  }
+
+  .container-about {
+    flex-direction: column;
+  }
+
+  .container-skills {
+    justify-content: center;
+  }
+
+  #container-img-contact {
+    margin-bottom: -9.8rem;
+  }
+
+  #img-contact {
+    width: 13rem;
+  }
+
+  section {
+    padding-top: 2rem;
+  }
+
+  #contact {
+    padding-top: 8rem;
   }
 }
