--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,11 @@ nav {
   width: 190rem;
 }
 
+.img-thumbnail {
+  max-width: none;
+}
+
+
 #img-about {
   background-color: #494e5f;
   box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
@@ -94,11 +99,11 @@ nav {
 
 #container-img-contact {
   z-index: 1;
-  margin: 10rem 0 -20.50rem 10rem;
+  margin: 10rem 0 -17.5rem 10rem;
 }
 
 #img-contact {
-  width: 19rem;
+  width: 20rem;
   border: none;
   border-radius: 100%;
   box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
@@ -197,7 +202,7 @@ footer {
   animation-name: fadeInLeft;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .h-100 {
     height: auto !important;
   }
@@ -286,6 +291,8 @@ footer {
 }
 
 @media (max-width: 600px) {
+
+
   .h-100 {
     height: auto !important;
   }
