--- a/src/style.css
+++ b/src/style.css
@@ -11,19 +11,49 @@ body {
   box-sizing: border-box;
 }
 
+/* .selector::selection {
+  background-color: #00ADB5 !important;
+  color: #222831 !important;
+} */
+
+:root {
+  --primary-color: #222831;
+  --secondary-color: #00adb5;
+  --neutral-color: #393e46;
+  --font-color: white;
+  --shadow-standart: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
+}
+
+span,
+.nav-link {
+  color: var(--font-color) !important;
+}
+
 nav {
-  border-bottom: 0.313rem solid #494e5f;
+  background-color: var(--primary-color);
+  border-bottom: 0.313rem solid var(--secondary-color);
 }
 
 .text-light {
-  color: #ff914d !important;
+  color: var(--secondary-color) !important;
+}
+
+.btn-default {
+  color: var(--font-color);
+  background-color: var(--secondary-color);
+}
+
+.btn-default:hover {
+  color: var(--font-color);
+  background-color: #018e96;
+  transition: background-color 450ms ease-in-out;
 }
 
 #home {
-  color: white;
+  color: var(--font-color);
   background: no-repeat;
   background-size: 100%;
-  background-image: url(./assets/mohammad-rahmani-8qEB0fTe9Vw-unsplash.jpg);
+  background-image: url(./assets/Background.jpg);
 }
 
 .btn-animation {
@@ -56,10 +86,9 @@ nav {
   max-width: none;
 }
 
-
 #img-about {
-  background-color: #494e5f;
-  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+  background-color: var(--secondary-color);
+  box-shadow: var(--shadow-standart);
 }
 
 .card-img-top {
@@ -77,7 +106,7 @@ nav {
 
 .card-skills:hover {
   transform: scale(1.05);
-  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+  box-shadow: var(--shadow-standart);
 }
 
 .container-projects {
@@ -89,12 +118,12 @@ nav {
   margin: 3.125rem 1.25rem;
   border: none;
   transition: transform 200ms ease-in-out;
-  box-shadow: 0.125rem 0.25rem 0.375rem rgba(0, 0, 0, 0.075);
+  box-shadow: var(--shadow-standart);
 }
 
 .card:hover {
   transform: scale(1.06);
-  box-shadow: 0.125rem 0.25rem 0.625rem rgba(0, 0, 0, 0.075);
+  box-shadow: var(--shadow-standart);
 }
 
 #container-img-contact {
@@ -106,7 +135,7 @@ nav {
   width: 20rem;
   border: none;
   border-radius: 100%;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
+  box-shadow: var(--shadow-standart);
 }
 
 section {
@@ -115,9 +144,9 @@ section {
 
 footer {
   text-align: center;
-  background-image: -webkit-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
-  background-image: -moz-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
-  background-image: -ms-linear-gradient(-58deg, #ffd24b 0%, #ff904b 56%);
+  background-image: -webkit-linear-gradient(-58deg, #222831 0%, #393e46 56%);
+  background-image: -moz-linear-gradient(-58deg, #222831 0%, #393e46 56%);
+  background-image: -ms-linear-gradient(-58deg, #222831 0%, #393e46 56%);
 }
 
 .container-apps-contact {
@@ -130,15 +159,14 @@ footer {
   width: 3.75rem;
   margin-top: 1.5rem;
   border-radius: 50%;
-  border: 0.125rem white solid;
-  background-color: white;
   transition: transform 200ms ease-in-out;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
+  box-shadow: var(--shadow-standart);
 }
 
 .img-app:hover {
   transform: scale(1.06);
-  border: 0.125rem rgb(255, 218, 218) solid;
+  background-color: #eeeeee;
+  transition: background-color 700ms ease-in-out;
 }
 
 #contact {
@@ -150,16 +178,27 @@ footer {
 
 .text-contact {
   margin: 2rem 0;
-  width: 300px;
+  width: auto;
+  color: var(--font-color);
 }
 
-.title-email{
-  color: white;
+.title-email {
+  font-size: 30px;
+  color: var(--font-color);
   text-decoration: none;
+  transition: color 0.3s ease-in-out;
 }
 
 .title-email:hover {
-  color: rgb(212, 212, 212);
+  color: #222831;
+}
+
+#img-contact {
+  width: 13rem;
+}
+
+.img-app {
+  margin-bottom: 1.25rem;
 }
 
 /* ANIMATION --> */
@@ -214,6 +253,7 @@ footer {
   .container-img-about {
     display: flex;
     justify-content: center;
+    width: auto;
   }
 
   #img-about {
@@ -242,136 +282,33 @@ footer {
     justify-content: center;
   }
 
-#container-img-contact {
-  display: flex;
-  justify-content: center;
-  z-index: 1;
-  margin: 10rem 0 -7rem 0;
+  #container-img-contact {
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    margin: 10rem 0 -7rem 0;
   }
-}
 
-#img-contact {
-  width: 13rem;
-  border: none;
-  border-radius: 100%;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
-}
+  #contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 8rem;
+  }
 
-.container-apps-contact {
-  display: flex;
-  justify-content: space-between;
-  width: 15.625rem;
-}
-
-.img-app {
-  width: 3.75rem;
-  margin-bottom: 1.25rem;
-  border-radius: 50%;
-  border: 0.125rem white solid;
-  background-color: white;
-  transition: transform 200ms ease-in-out;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
-}
-
-.img-app:hover {
-  transform: scale(1.06);
-  border: 0.125rem rgb(255, 218, 218) solid;
-}
-
-#contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  padding-top: 8rem;
-}
-
-.container-img-about {
-  width: auto;
+  .title-email {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 600px) {
-
-
-  .h-100 {
-    height: auto !important;
-  }
-
   #home {
     background-image: url(./assets/Background-mobile.jpg);
-  }
-
-  .text.about {
-    flex-direction: column;
   }
 
   #text-home {
     padding-top: 12.5rem;
     margin: 2rem;
   }
-
-  #text-name {
-    font-size: 3rem;
-  }
-
-  #text-description {
-    font-size: 2rem;
-    width: 20rem;
-  }
-
-  .container-about {
-    flex-direction: column;
-  }
-
-  .container-skills {
-    justify-content: center;
-  }
-
-#container-img-contact {
-  display: flex;
-  justify-content: center;
-  z-index: 1;
-    margin: 10rem 0 -7rem 0;
-}
-
-#img-contact {
-  width: 13rem;
-  border: none;
-  border-radius: 100%;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
-}
-
-.container-apps-contact {
-  display: flex;
-  justify-content: space-between;
-  width: 15.625rem;
-}
-
-.img-app {
-  width: 3.75rem;
-  margin-bottom: 1.25rem;
-  border-radius: 50%;
-  border: 0.125rem white solid;
-  background-color: white;
-  transition: transform 200ms ease-in-out;
-  box-shadow: 0.125rem 0.25rem 0.725rem rgba(0, 0, 0, 0.085);
-}
-
-.img-app:hover {
-  transform: scale(1.06);
-  border: 0.125rem rgb(255, 218, 218) solid;
-}
-
-#contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  padding-top: 8rem;
-}
-
-.container-img-about {
-  width: auto;
-}
-
 }
