--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,10 @@ nav {
   border-bottom: 0.313rem solid var(--secondary-color);
 }
 
+.navbar-toggler-icon span {
+  color: white !important;
+}
+
 .text-light {
   color: var(--secondary-color) !important;
 }
