--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 * {
+  font-weight: 400;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -315,4 +316,5 @@ footer {
     padding-top: 12.5rem;
     margin: 2rem;
   }
+
 }
